--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: aliceblue;
 }
 
 .container {
-    background: #000;
+    background: black;
     opacity: 0.8;
     border-radius:25px;
     padding:20px;
